[gd_scene load_steps=12 format=3 uid="uid://calpkahuvqm27"]

[ext_resource type="Script" path="res://Scripts/door.gd" id="1_ke661"]
[ext_resource type="Texture2D" uid="uid://cagp72jbd3j5g" path="res://Assets/Tileset/Tileset32/Objects/door.png" id="2_mxtmf"]
[ext_resource type="Texture2D" uid="uid://o7u481xg4xop" path="res://Assets/Tileset/Tileset32/Objects/DoorComputer.png" id="3_f2i1v"]
[ext_resource type="AudioStream" uid="uid://bsm1opfw84yp2" path="res://Assets/Audio/SFX/door.mp3" id="4_0q3ow"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x01dw"]
size = Vector2(24, 18)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_opdqg"]
size = Vector2(32, 64)

[sub_resource type="Animation" id="Animation_q0edk"]
length = 0.001

[sub_resource type="Animation" id="Animation_yhb7k"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_6enss"]
resource_name = "open"
length = 0.55
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, -32), Vector2(0, -96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -64)]
}

[sub_resource type="Animation" id="Animation_gtt5l"]
resource_name = "opened"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteDoor:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -96)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StaticBody2D/Collider:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -64)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3fb0t"]
_data = {
"RESET": SubResource("Animation_q0edk"),
"idle": SubResource("Animation_yhb7k"),
"open": SubResource("Animation_6enss"),
"opened": SubResource("Animation_gtt5l")
}

[node name="Door" type="Area2D"]
script = ExtResource("1_ke661")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(-31, -23)
shape = SubResource("RectangleShape2D_x01dw")

[node name="SpriteComputer" type="Sprite2D" parent="."]
position = Vector2(-32, 24)
texture = ExtResource("3_f2i1v")
offset = Vector2(0, -40)

[node name="SpriteDoor" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_mxtmf")

[node name="StaticBody2D" type="StaticBody2D" parent="."]
position = Vector2(0, -32)

[node name="Collider" type="CollisionShape2D" parent="StaticBody2D"]
shape = SubResource("RectangleShape2D_opdqg")
debug_color = Color(0.987238, 0, 0.315168, 0.42)

[node name="Animator" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3fb0t")
}
autoplay = "idle"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_0q3ow")
volume_db = -3.0
bus = &"SFX"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="animation_finished" from="Animator" to="." method="_on_animator_animation_finished"]
